<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity"
    android:background="@color/screen_color2">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TextView_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="251.64dp"
            android:layout_height="310.61dp"
            android:src="@drawable/logo3"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/TextView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_login"
            android:layout_width="329dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="49dp"
            android:autofillHints="@string/login"
            android:background="@drawable/edit_text3"
            android:drawableStart="@drawable/login"
            android:drawablePadding="18dp"
            android:ems="30"
            android:gravity="center_vertical|start"
            android:inputType="textEmailAddress"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:hint="@string/login"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/EditText_password"
            android:inputType="textPassword"
            android:layout_width="329dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="18dp"
            android:background="@drawable/edit_text_password"
            android:layout_gravity="center"
            android:gravity="center_vertical|start"
            android:hint="@string/password"
            android:ems="30"
            android:textColor="@color/white"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:textSize="16sp"
            android:textColorHint="@color/white"
            android:autofillHints="password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_in"
            android:onClick="next3"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="34.5dp"
            android:text="@string/button_next"
            android:textColor="@color/purple"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/button_send" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/TextView_forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="60dp"
                android:layout_marginEnd="5dp"
                android:minHeight="48dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="17sp"
                />

            <TextView
                android:id="@+id/TextView_restore_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="60dp"
                android:minHeight="48dp"
                android:onClick="next4"
                android:text="@string/restore_password"
                android:textColor="@color/green"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>