<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryActivity"
    android:background="@color/screen_color3">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:text="@string/password_recovery"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="29dp"
        android:text="@string/password_recovery_info"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/EditText_login"
        android:inputType="textEmailAddress"
        android:layout_width="353dp"
        android:layout_height="70dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="29dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="18dp"
        android:background="@drawable/edit_text3"
        android:gravity="center_vertical|start"
        android:hint="@string/log_or_mail"
        android:ems="30"
        android:paddingStart="34dp"
        android:paddingEnd="34dp"
        android:textSize="16sp"
        android:textColorHint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="next7"
        android:id="@+id/button_send"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="118dp"
        android:text="@string/button_send"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_login" />

    <TextView
        android:id="@+id/textView4"
        android:onClick="back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="85dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/return_back"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send" />
</androidx.constraintlayout.widget.ConstraintLayout>