<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/screen_color2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="112dp"
                android:layout_height="138.7dp"
                android:layout_marginTop="76dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="320dp"
                android:layout_height="76.09dp"
                android:layout_marginTop="203dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/person_24px_1"
                android:drawablePadding="18dp"
                android:gravity="center_vertical|start"
                android:onClick="next"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/button_sign"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="320dp"
                android:layout_height="76.09dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_text2"
                android:drawableStart="@drawable/how_to_reg_24px"
                android:drawablePadding="18dp"
                android:gravity="center_vertical|start"
                android:onClick="next2"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/button_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>